[FIX] Updated styles to use a custom scrollbar for the main app content

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,5 @@
 //@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
-body {
-  background-image: url('./assets/background.jpg');
-  height: 100%;
-  width: 100%;
-}
-
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
